# plank

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: README.md  test-simple.yml.backup  test.yml
docs/: TECHNICAL_DECISIONS.md  TESTING.md  USECASES.md  nginx.conf  plank.service
frontend/: .oxlintrc.json  .stylelintrc.json  ARCHITECTURE.md  README.md  build.ts  dev.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.tsx
frontend/src/components/: App.tsx  ControlPanel.tsx  CreateItemForm.tsx  LogPanel.tsx  StatusIndicator.tsx  app.tsx  control-panel.tsx  create-item-form.tsx  items-list.tsx  log-panel.tsx  status-indicator.tsx  theme-switcher.tsx
frontend/src/components/ui/: icon.tsx
frontend/src/components/ui/button/: button.css  button.tsx
frontend/src/components/ui/field/: field.css  index.ts
frontend/src/components/ui/field/number-field/: index.ts  number-field.tsx
frontend/src/components/ui/field/select-field/: index.ts  select-field.tsx
frontend/src/components/ui/field/text-field/: index.ts  text-field.tsx
frontend/src/lib/: config.ts  store.ts  websocket.ts
frontend/src/scripts/: config.js  main.js
frontend/src/store/: index.ts  types.ts
frontend/src/styles/: main.css  variables.css
plank/: __init__.py  config.py  main.py
plank/api/: routes.py
plank/db/: __init__.py  connection.py  init.py  listener.py  models.py
plank/websocket/: manager.py
scripts/: dev.sh  setup_test_db.sh
tests/: README.md  __init__.py  conftest.py  test_api.py  test_integration.py
(+2 files in other folders)
